--- a/lib/javamail-1.4.5/demo/logging/maildemo.properties
+++ b/lib/javamail-1.4.5/demo/logging/maildemo.properties
@@ -1,5 +1,5 @@
 # This can be used by setting the system property
-# -Djava.util.logging.config.file=path to this file
+# -Djava.util.logging.config.file=Path to this file
 
 # Taken from the JDK defaults.
 handlers= java.util.logging.ConsoleHandler
@@ -32,7 +32,7 @@ com.sun.mail.util.logging.MailHandler.verify = local
 com.sun.mail.util.logging.MailHandler.errorManager = FileErrorManager
 
 # Configure the FileErrorManager for demo (not required).
-# FileErrorManager.pattern = path-to-dir
+# FileErrorManager.pattern = Path-to-dir
 
 # Debug mail transport issues.
 mail.debug = false
